Set up for JRS creations
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>